[gd_scene load_steps=3 format=3 uid="uid://b73w731afvpdy"]

[ext_resource type="Theme" uid="uid://bo8kigawanwjo" path="res://text_theme.tres" id="1_7nqlh"]
[ext_resource type="Script" path="res://Searchbar.gd" id="1_j7lf3"]

[node name="Searchbar" type="PanelContainer"]
custom_minimum_size = Vector2(200, 2.08165e-12)
offset_right = 200.0
script = ExtResource("1_j7lf3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SearchInput" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_7nqlh")

[node name="Result1" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme = ExtResource("1_7nqlh")
text = "next"

[node name="Result2" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme = ExtResource("1_7nqlh")
text = "next"

[node name="Result3" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme = ExtResource("1_7nqlh")
text = "next"
